--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.5",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux": "^5.0.0-alpha.0",
     "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "2.4.0",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
   },
