--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1.3",
     "font-awesome": "^4.7.0",
+    "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.0",
     "sass": "^1.49.7",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
